# tonkl-protocol

./: .dockerignore  .gitignore  LICENSE  Obscura_Security_Audit.docx  README.md  SECURITY.md  SECURITY_RISK_REGISTER.md  docker-compose.yml  tonkl
docker/: Dockerfile.node
obscura-hasher/: Nargo.toml
obscura-hasher/src/: main.nr
obscura-lib/: Nargo.toml
obscura-lib/src/: constants.nr  hash.nr  lib.nr  merkle.nr
obscura-merge/: Nargo.toml
obscura-merge/src/: main.nr
obscura-mint/: Nargo.toml
obscura-mint/src/: main.nr
obscura-node/: Cargo.toml  testnet.json
obscura-node/explorer/: index.html
obscura-node/scripts/: bip39.py  genesis.py  launch_testnet.py  node_client.py  obscura_wallet.py  test_client.py  test_composability.py  test_e2e_transfer.py  test_verify.sh  test_wallet_cli.py  witness_builder.py
obscura-node/src/: block.rs  lib.rs  main.rs  mempool.rs  node.rs  rpc.rs  state.rs  verifier.rs
obscura-node/vks/mint/: vk
obscura-node/vks/split/: vk
obscura-prover/: Cargo.toml  build.rs
obscura-prover/scripts/: generate_hd_test_vectors.py  generate_reference_fixture.py
obscura-prover/src/: lib.rs  main.rs
obscura-prover/tests/: witness_compatibility.rs
obscura-prover/tests/fixtures/: reference_witness.msgpack
obscura-split/: Nargo.toml
obscura-split/src/: main.nr
obscura-transfer/: Nargo.toml
obscura-transfer/scripts/: address.py  bip39.py  diff_witness_formats.py  generate_witness.py  keychain.py  ramdisk.py  secure_key_manager.py  setup.sh  wallet.py
obscura-transfer/src/: main.nr  note.nr
obscura-tree/: generate_merge_witness.py  generate_mint_witness.py  generate_split_witness.py  last_merge_witness.json  last_mint_witness.json  last_split_witness.json  merkle.py  test_tree.py
probe/: Nargo.toml
probe-grumpkin/: Nargo.toml
probe-grumpkin/src/: main.nr
probe/src/: main.nr
redteam/: README.md  clawbot-mission.md  findings-template.md  scenarios.md
tonkl-hasher/: Nargo.toml
tonkl-hasher/src/: main.nr
tonkl-lib/: Nargo.toml
tonkl-lib/src/: constants.nr  lib.nr  merkle.nr  note.nr
tonkl-merge/: Nargo.toml
tonkl-merge/src/: main.nr
tonkl-mint/: Nargo.toml
tonkl-mint/src/: main.nr
tonkl-node/: Cargo.toml  testnet.json
tonkl-node/explorer/: index.html
tonkl-node/obscura-data/: db  snap.00000000000000F8
tonkl-node/scripts/: genesis.py  launch_testnet.py  node_client.py  p2p.py  test_client.py  test_composability.py  test_e2e_transfer.py  test_verify.sh  test_wallet_cli.py  tonkl_wallet.py  witness_builder.py
tonkl-node/src/: block.rs  consensus.rs  lib.rs  main.rs  mempool.rs  node.rs  p2p.rs  rpc.rs  state.rs  verifier.rs
tonkl-node/test-vks/merge/: vk
tonkl-node/vks/transfer/: vk
tonkl-prover/: Cargo.toml  build.rs
tonkl-prover/scripts/: generate_hd_test_vectors.py  generate_reference_fixture.py
tonkl-prover/src/: lib.rs  main.rs
tonkl-prover/tests/: witness_compatibility.rs
tonkl-prover/tests/fixtures/: reference_circuit.json  reference_inputs.json
tonkl-split/: Nargo.toml
tonkl-split/src/: main.nr
tonkl-transfer/: .gitignore  Nargo.toml
tonkl-transfer/scripts/: address.py  diff_witness_formats.py  generate_witness.py  keychain.py  ramdisk.py  secure_key_manager.py  setup.sh  wallet.py
tonkl-transfer/src/: hash.nr  main.nr
tonkl-tree/: generate_merge_witness.py  generate_mint_witness.py  generate_split_witness.py  merkle.py  test_tree.py
