[package]
name = "obscura-node"
version = "0.1.0"
edition = "2021"
description = "Tonkl Protocol single-node kernel. Persistent state tree, nullifier set, block builder/validator, mempool, and JSON-RPC interface."

# ─────────────────────────────────────────────────────────────────────
# Phase B1: Local Single-Node Kernel
#
# This crate implements the node infrastructure needed to run Tonkl
# as a local testnet. It builds on top of obscura-prover for all
# cryptographic operations (Poseidon2 hashing, Merkle trees, proof
# verification).
#
# Architecture:
#   State layer  → sled (embedded key-value store)
#   Block format → bincode-serialized structs
#   Mempool      → in-memory priority queue
#   RPC          → JSON-RPC over HTTP (jsonrpsee)
#   Proofs       → verified via bb (Barretenberg CLI)
# ─────────────────────────────────────────────────────────────────────

[dependencies]
# Reuse cryptographic primitives from obscura-prover
obscura-prover = { path = "../obscura-prover" }

# Embedded key-value store for persistent state
sled = "0.34"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Hex encoding
hex = "0.4"

# Hashing for bloom filter
blake3 = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON-RPC server
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# CORS middleware for JSON-RPC (localhost-only in alpha)
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
http = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client for status command
reqwest = { version = "0.12", features = ["json"] }

# Temp files for proof verification
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
